Elをdecoratorパターンにしました。 文字列に評価式を埋め込めるようにしました（1個だけ・・・・）
git-svn-id: https://www.seasar.org/svn/sandbox/fisshplate/trunk@143 c159f9c0-7f7c-4dca-964d-717b2124a8cb